Scheduler to delete chronicle queue dump